<resources>
    <string name="app_name">Smart Classroom</string>
    <string name="e59">E59</string>
    <string name="e62">E62</string>
    <string name="e63">E63</string>
    <string name="light">Light</string>
    <string name="_35">35%</string>
    <string name="hello_user">Hello User</string>
    <string name="_80">80%</string>
    <string name="_20_c">20°C</string>
    <string name="_10">10%</string>
    <string name="_19_c">19°C</string>
    <string name="_21_c">21°C</string>
    <string name="temperature">Temperature</string>
    <string name="_90">90%</string>
    <string name="humidity">Humidity</string>
    <string name="rollos">Rollos</string>
    <string name="heating">Heating</string>
    <string name="created_with_love_3">created with love :3</string>
    <string name="todo">TODO</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="zero">0</string>
</resources>